import { SceneToolHandler } from './sceneToolHandler';

export class BaseToolHandler extends SceneToolHandler {
  execute(payload: object): void {
    void payload;
  }
}
