import { SceneToolHandler } from './sceneToolHandler';

export class TextureExportHandler extends SceneToolHandler {
  execute(payload: object): Blob {
    void payload;
    return new Blob();
  }
}
