@startuml


skinparam linetype ortho

class SceneStorage {
  .. данные сцены ..
  scene: const ref
  models: storage slice
  materials: storage slice
  lights: storage slice
  camera: storage slice
  environment: storage slice
  {method} error catcher(): func
  .. изменение данных (не влияет на сцену) ..
  actions(): (string) => Void [switch-case of storage slice funcs, group of slices' funcs]
  .. данные, связанные со сценой ..
  {field} active: [link (storage object) | null]
  project name: var string
}

class History {
  userActions: Array<obj>
  do(): [push action to userActions]
  undo(): [pop action from userActions]
  count: number [current length of History]
  maxCount: number [max length of History]
  cleanGarbage(): [remove extra actions from History, hard delete objects]
  garbage: Array<obj> [objects to delete]
  scene: SceneStorage
}

class ActiveObjectHandler {
  active: number [object id]
  scene: const SceneStorage
  change(): [update SceneStorage active with object link]
}

abstract class SceneToolHandler {
  {abstract} action: string [of storage slice func]
  parameters: object [parameters of storage slice func]
  scene: SceneStorage
  history: History
  do(): (func) => void [call to SceneStorage action]
  register: (action) => void [add action to History]
}

class DeletionHandler {
  action: "DeleteObject"
}

class BaseToolHandler {
  action: "Scale" | "Rotate" | "Pan" | "Visibility" | "Block" | "Material" | "Light" | "Camera"
  values: obj [properties of action]
}


class LightAdditionHandler {
action: "AddLight"
}
class CameraEditingHandler {
action: "EditCamera"
values: obj [properties of camera]
}

record ObjectPresets {
camera: obj
spotlight: obj
hdri: obj
}

class TextureImportHandler {
action: "ImportTexture"
file: string
textureID: number
}

class TextureImportFigmaHandler {
figmaHandler: FigmaHandler
getFrame(): () => Int8Array | null [get selected frame from FigmaAPI through FigmaHandler.call]
}

abstract class RenderHandler {
renderer: Renderer
render(): () => Blob
}

class Renderer {
action: "Texture" | "Scene"
renderScene(): (HTMLCanvas) => Blob 
renderTexture(): (HTMLCanvas) => Blob
scene: Scene
}

class TextureExportHandler {
action: "ExportTexture"
textureID: number
}

class TextureExportFigmaHandler {
figmaHandler: FigmaHandler
pasteFrame: (HTMLCanvas) => Uint8Array
}

class ExportRenderHandler {
action: "ExportRender"
}

abstract class TransformSceneHandler {
{abstract} action
scene: SceneStorage
encoderType: "OBJ" | "FBX" | "GLB" | "Figma"
}

class ShareSceneFileHandler {
action
inputScene
}

class ShareSceneFigmaHandler {
action
encode
getRenderFrame()
getTextureFrames()
merge()
pasteFrame()
render()
}

class SceneEncoder {
action
export(): ("OBJ" | "FBX" | "GLB") => string
import(): ("OBJ" | "FBX" | "GLB" | "Figma") => string
collectTextures()
truncate()
}
together{
class FigmaHandler {
toggle
call
errorCatcher
}

class SceneAnalyzer {
getTexturePreview()
getSceneProperties()
}

class FigmaAPI {
action
parameters
errorCatcher
colors
}
}
() circle

ActiveObjectHandler ..> SceneStorage
SceneToolHandler ..> History
SceneToolHandler ..> SceneStorage
Renderer ..> SceneStorage
History ..> SceneStorage

BaseToolHandler - circle
LightAdditionHandler - circle
CameraEditingHandler - circle
circle - ObjectPresets

DeletionHandler --|> SceneToolHandler
BaseToolHandler --|> SceneToolHandler
LightAdditionHandler --|> SceneToolHandler
CameraEditingHandler --|> SceneToolHandler
RenderHandler --|> SceneToolHandler
TextureImportHandler --|> SceneToolHandler

RenderHandler ..> Renderer
ExportRenderHandler --|> RenderHandler
TextureExportHandler --|> RenderHandler
TextureExportFigmaHandler --|> TextureExportHandler
TextureImportFigmaHandler --|> TextureImportHandler

TransformSceneHandler ..> SceneStorage
ShareSceneFileHandler --|> TransformSceneHandler
ShareSceneFileHandler ..> SceneAnalyzer
ShareSceneFigmaHandler --|> TransformSceneHandler
ShareSceneFigmaHandler ..> ExportRenderHandler
ShareSceneFigmaHandler ..> SceneEncoder
ShareSceneFigmaHandler ..> FigmaHandler
ShareSceneFigmaHandler ..> SceneAnalyzer

FigmaAPI -\\ FigmaHandler
FigmaHandler -\\ FigmaAPI
TextureImportFigmaHandler ..> FigmaHandler
TextureExportFigmaHandler ..> FigmaHandler


@enduml
